added extra text

--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -1,5 +1,5 @@
 <p style="color: green"><%= notice %></p>
-zain expense project
+zain expense project daily expense
 <h1>Expenses</h1>
 <h1> Total out standing Amount is: <b> <%= Expense.pluck(:amount).sum %></b></h1>
 <table class="table table-bordered">
