--- a/app/views/expenses/show.html.erb
+++ b/app/views/expenses/show.html.erb
@@ -3,7 +3,7 @@
 <%= render @expense %>
 
 <div>
-  <%= link_to "Edit this expense", edit_expense_path(@expense) %> |
-  <%= link_to "Back to expenses", expenses_path %>
-  <%= link_to 'destroy', @expense, data: { turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
+  <%= link_to "Edit this expense", edit_expense_path(@expense) %><br><br>
+  <%= link_to "Back to expenses", expenses_path %><br><br>
+  <%= link_to 'Destroy', @expense, data: { turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
 </div>
