--- a/app/views/expenses/_expense.html.erb
+++ b/app/views/expenses/_expense.html.erb
@@ -1,17 +1,17 @@
- <table class="table">
-    <thead>
-      <tr> Title</tr>
-      <tr> Description</tr>
-      <tr> Amount</tr>
-      <tr> Show</tr>
-      <tr> Edit</tr>
-      <tr> Delete</tr>
-    </thead>
-    <tbody>
-    <tr> <%= expense.title %></tr>
-    <tr> <%= expense.description %></tr>
-    <tr> <%= expense.amount %></tr>
-    </tbody>
-  </table>
+<div id="<%= dom_id expense %>">
+  <p>
+    <strong>Title:</strong>
+    <%= expense.title %>
+  </p>
+
+  <p>
+    <strong>Description:</strong>
+    <%= expense.description %>
+  </p>
+
+  <p>
+    <strong>Amount:</strong>
+    <%= expense.amount %>
+  </p>
 
 </div>
