--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -1,36 +1,175 @@
 <p style="color: green"><%= notice %></p>
-<h1>Total Expenses</h1>
-<h1> Total out standing Amount is: <b> <%= Expense.pluck(:amount).sum %></b></h1>
-<table class="table table-bordered">
-  <thead>
-    <th scope="col">#</th>
-    <th> Title</th>
-    <th> Description</th>
-    <th> Amount</th>
-    <th>Actions</th>
-  </thead>
-  <tbody>
-  <% @expenses.each_with_index do |expense, index| %>
+<div class="container">
+  <div class="header">
+    <h1>Total Expenses</h1>
+    <h1>Total outstanding Amount is: <b><%= Expense.pluck(:amount).sum %></b></h1>
+  </div>
+
+  <br>
+
+  <%= link_to "Sign out", destroy_user_session_path, method: :delete ,class: "btn btn-danger" %>
+
+  <table id="expenses-table" class="table table-bordered">
+    <thead>
     <tr>
-      <th scope="row"><%= index + 1 %></th>
-      <td> <%= expense.title %></td>
-      <td> <%= expense.description %></td>
-      <td> <%= expense.amount %></td>
-      <td>
-        <%= link_to 'Show', expense, class: "btn btn-primary btn-sm mt-1" %>
-        <%= link_to 'Edit', edit_expense_path(expense), class: "btn btn-primary btn-sm mt-1" %>
-        <%= link_to 'Delete', expense, data: { turbo_method: :delete, turbo_confirm: "Are you sure?" } %>
-      </td>
+      <th>#</th>
+      <th>Title</th>
+      <th>Description</th>
+      <th>Amount</th>
+      <th>Actions</th>
     </tr>
-  <% end %>
-  </tbody>
-</table>
-<br>
+    </thead>
+    <tbody>
+    <% @expenses.each_with_index do |expense, index| %>
+      <tr>
+        <td><%= index + 1 %></td>
+        <td><%= expense.title %></td>
+        <td><%= expense.description %></td>
+        <td><%= expense.amount %></td>
+        <td>
+          <%= link_to 'Show', expense, class: "btn btn-primary btn-sm mt-1" %>
+          <%= link_to 'Edit', edit_expense_path(expense), class: "btn btn-primary btn-sm mt-1" %>
+          <%= link_to 'Delete', expense, data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: "btn btn-danger btn-sm mt-1" %>
+        </td>
+      </tr>
+    <% end %>
+    </tbody>
+  </table>
+
+  <br>
+  <%= will_paginate @expenses , class: 'pagination'%>
+  <%= link_to "New expense", new_expense_path, class: "btn btn-success" %>
+</div>
+
 <style>
-    .table-bordered {
-        border: 1px solid #dee2e6;
+    .pagination {
+        display: flex;
+        justify-content: center;
+        list-style: none;
+        padding: 0;
+        margin-top: 20px;
+    }
+
+    .pagination li {
+        margin: 0 5px;
+        display: inline-block;
+    }
+
+    .pagination a {
+        padding: 8px 12px;
+        border: 1px solid #ddd;
+        background-color: #f7f7f7;
+        color: #333;
+        text-decoration: none;
+        border-radius: 4px;
+        transition: background-color 0.3s ease-in-out;
+    }
+
+    .pagination a:hover {
+        background-color: #eee;
+    }
+
+    .pagination .current {
+        background-color: #333;
+        color: #fff;
+        pointer-events: none;
+    }
+    /* Custom styles */
+    body {
+        background-image: url('https://images.pexels.com/photos/1666467/pexels-photo-1666467.jpeg');
+        background-size: cover;
+        background-position: center;
+    }
+
+    .container {
+        max-width: 1500px;
+        margin: 0 auto;
+        padding: 20px;
+        background-color: rgba(255, 255, 255, 0.8);
+        border-radius: 10px;
+    }
+
+    .header {
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    h1 {
+        color: #333;
+        font-size: 24px;
+        margin-bottom: 20px;
+    }
+
+    .table {
+        width: 100%;
+        max-width: 1000px;
+        margin-left: auto;
+        margin-right: auto;
+        /*width: 100%;*/
+        margin-bottom: 1rem;
+        color: #212529;
+    }
+
+    .table th,
+    .table td {
+        padding: 0.75rem;
+        vertical-align: top;
+        border-top: 1px solid #dee2e6;
+    }
+
+    .table thead th {
+        vertical-align: bottom;
+        border-bottom: 2px solid #dee2e6;
+    }
+
+    .btn {
+        display: inline-block;
+        font-weight: 400;
+        color: #fff;
+        text-align: center;
+        vertical-align: middle;
+        cursor: pointer;
+        user-select: none;
+        background-color: #007bff;
+        border: 1px solid #007bff;
+        padding: 0.375rem 0.75rem;
+        font-size: 14px;
+        line-height: 1.5;
+        border-radius: 0.25rem;
+        transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+        border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    }
+
+    .btn-primary {
+        background-color: #007bff;
+        border-color: #007bff;
+    }
+
+    .btn-danger {
+        background-color: #dc3545;
+        border-color: #dc3545;
+    }
+
+    .btn-success {
+        background-color: #28a745;
+        border-color: #28a745;
+    }
+
+    .btn-sm {
+        padding: 0.25rem 0.5rem;
+        font-size: 12px;
+        line-height: 1.5;
+        border-radius: 0.2rem;
+    }
+
+    .mt-1 {
+        margin-top: 0.25rem;
     }
 </style>
-
-
-<%= link_to "New expense", new_expense_path %>
+<script>
+  document.addEventListener("turbolinks:load", function() {
+    $('#expenses-table').DataTable({
+        "pagingType": "full_numbers"
+    });
+  });
+</script>
